--- a/404.html
+++ b/404.html
@@ -1,54 +1,48 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-<!-- Required meta tags -->
-<link rel="icon" href="assets/img/catblush.ico">
-<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>404 | Shiruvaaa.net</title>
-<meta name="description"
-    content="A website full of content!">
-</meta>
-<meta property="og:title" content="404 page not found" />
-<meta property="og:description" content="Aww, you got lost. Silly you." />
-<meta property="og:type" content="image/png" />
-<meta property="og:url" content="https://shiruvaaa.net/" />
-<meta property="og:image" content="https://shiruvaaa.net/assets/img/catblush.png" />
-<meta property="og:image:width" content="112" />
-<meta property="og:image:height" content="112" />
-
-<link rel="stylesheet" href="assets/css/terminal-viewer.css">
-<link rel="stylesheet" href="assets/css/button.css">
-
+  <!-- Required meta tags -->
+  <link rel="icon" href="/assets/img/catblush.ico">
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 | Shiruvaaa.net</title>
+  <meta name="description" content="Ahw, silly you. You got lost!"></meta>
+  <meta property="og:title" content="Shiruvaaa.net" />
+  <meta property="og:description" content="Ahw, silly you. You got lost!" />
+  <meta property="og:type" content="image/png" />
+  <meta property="og:url" content="https://shiruvaaa.net/" />
+  <meta property="og:image" content="https://shiruvaaa.net/assets/img/catblush.png" />
+  <meta property="og:image:width" content="112" />
+  <meta property="og:image:height" content="112A" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
-<body>
-  <div class="terminal">
-    <span class="dollar"></span> Loading page...
-    <br/>
-    <span class="dollar"></span> <a style="color: red;">[ERROR]</a> The page could not be found
-    <br/>
-    <span class="dollar"></span> Finding alternative...
-    <br/>
-    <span class="dollar"></span> <a style="color: green;">[SUCCESS]</a> Alternative found
-    <br/>
-    <span class="dollar"></span> It is advised to return <a href="https://shiruvaaa.net">home</a>
+<!-- Links -->
+<link rel="stylesheet" href="assets/css/terminal-viewer.css">
+<!--  -->
+<body class="pbody">
+  <div class="pbody2 container mb-3">
+    <div class="row content terminal">
+      <div class="col col-xxl-12 col-xl-10 col-lg-9 col-md-8 mx-auto">
+        <p class="ptext">
+          <span class="dollar"></span> Loading page...
+          <br />
+          <span class="dollar"></span> <a style="color: red;">[ERROR]</a> The page could not be found
+          <br />
+          <span class="dollar"></span> Finding alternative...
+          <br />
+          <span class="dollar"></span> <a style="color: green;">[SUCCESS]</a> Alternative found
+          <br />
+          <span class="dollar"></span> It is advised to return <a href="/">home</a>
+        </p>    
+      </div>  
+    </div>
   </div>
 </br>
-
-
-
-
-
-
-
-
+<!-- Custom Scripts -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/terminal-viewer.js"></script>
-
 <!-- FontAwesome CDN -->
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-a11y="true"></script>
 </body>
-
 </html>
