added story link

--- a/things/index.html
+++ b/things/index.html
@@ -31,7 +31,7 @@
           <br />
           <span class="dollar"></span> Try my barely touched <a href="/play" target="_blank">GB game</a>
           <br />
-          <span class="dollar"></span> Or read some of my tales at: <a href="https://stories.shiruvaaa.net" target="_blank">my story hub</a>  
+          <span class="dollar"></span> Or read some of my tales at: <a href="https://stories.shiruvaaa.net" target="_blank">Shiruvaaa's Stories</a>  
         </p>
       </div>
     </div>
