--- a/things/index.html
+++ b/things/index.html
@@ -31,7 +31,7 @@
           <br />
           <span class="dollar"></span> Try my barely touched <a href="/play" target="_blank">GB game</a>
           <br />
-          <span class="dollar"></span> Or read some of my tales at: <a href="https://stories.shiruvaaa.net" target="_blank">Shiruvaaa's Stories</a>  
+          <span class="dollar"></span> Or read some of my tales at <a href="https://stories.shiruvaaa.net" target="_blank">Shiruvaaa's Stories</a>  
         </p>
       </div>
     </div>
@@ -43,5 +43,4 @@
 <!-- FontAwesome CDN -->
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-a11y="true"></script>
 </body>
-
 </html>
