--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <br />
           <span class="dollar"></span> I'm an IT student 
           <br/>
-          <span class="dollar"></span> I have aproximate knowledge of many things
+          <span class="dollar"></span> I have approximate knowledge of many things
           <br/>
           <span class="dollar"></span> Hit me up if you wanna <a href="https://discordid.netlify.app/?id=296302114794373121" target="_blank">chat</a> :)
           <br/>
