--- a/things/index.html
+++ b/things/index.html
@@ -31,7 +31,9 @@
           <br />
           <span class="dollar"></span> Try my barely touched <a href="/play" target="_blank">GB game</a>
           <br />
-          <span class="dollar"></span> Or read some of my tales at <a href="https://stories.shiruvaaa.net" target="_blank">Shiruvaaa's Stories</a>  
+          <span class="dollar"></span> Or read some of my tales at <a href="https://stories.shiruvaaa.net" target="_blank">Shiruvaaa's Stories</a>
+          <br/>
+          <span class="dollar"></span> Click <a href="/"><u>here</u></a> to restart script
         </p>
       </div>
     </div>
