Added Lychee photo gallery link

--- a/things/index.html
+++ b/things/index.html
@@ -27,6 +27,8 @@
         <p class="ptext">
           <span class="dollar"></span> Check out my <a href="https://github.com/silverfs" target="_blank">Github</a>
           <br />
+          <span class="dollar"></span> Or view some of my <a href="https://lychee.shiruvaaa.net/" target="_blank">photos</a>
+          <br />
           <span class="dollar"></span> Browse through <a href="https://wiki.shiruvaaa.net" target="_blank">my wiki</a>
           <br />
           <span class="dollar"></span> Try my barely touched <a href="/play" target="_blank">GB game</a>
