--- a/play/index.html
+++ b/play/index.html
@@ -16,10 +16,6 @@
 <meta property="og:image:height" content="112A" />
 <!-- Links -->
 <link rel="stylesheet" href="/assets/css/play-button.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css">
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -34,19 +30,13 @@
       <span class="circle" aria-hidden="true">
         <span class="icon arrow"></span>
       </span>
-      <span class="button-text"><i class="fas fa-download"></i> GBStudio</span>
+      <span class="button-text"><i class="fa-solid fa-download"></i> GBStudio</span>
     </button>
   </div>
  
    
 </body>
 <!-- Custom Scripts -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- FontAwesome CDN -->
-<script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"></script>
-<!-- Other links -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<script type="text/javascript" src="/assets/js/f-awesome-all.min.js"
+<script type="text/javascript" src="/assets/js/jquery-3.7.1.min.js"></script>
 </html>
