--- a/things/index.html
+++ b/things/index.html
@@ -15,7 +15,7 @@
 <meta property="og:image:width" content="112" />
 <meta property="og:image:height" content="112A" />
 <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <!-- Links -->
 <link rel="stylesheet" href="/assets/css/terminal-viewer.css">
@@ -42,9 +42,7 @@
   </div> 
 </br>
 <!-- Custom Scripts -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="/assets/js/jquery-3.7.1.min.js"></script>
 <script type="text/javascript" src="/assets/js/terminal-viewer.js"></script>
-<!-- FontAwesome CDN -->
-<script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" data-auto-a11y="true"></script>
 </body>
 </html>
